2006-08-16  Al Riddoch  <alriddoch@zepler.org>

	* autogen.sh, configure.ac: Add --enable/disable-debug option, so
	  asserts are built correctly for distribution.

	* configure.ac, Eris/Makefile.am, test/Makefile.am: Cut down compiler
	  commandline clutter a bit.

2006-08-07  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Room.cpp: Fix logic of assert test so Lobby now works correctly.

2006-06-26  Al Riddoch  <alriddoch@zepler.org>

	* Release 1.3.11, Interface version 12.

2006-06-25  James Turner  <james@worldforge.org>

	* test/clientConnection.cpp: ignore LOGOUT ops, so that tests work again

2006-06-25  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Connection.cpp: Initialise local variable to avoid
	  warning.

2006-06-25  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version for release soon, including
	  interface version. Remove notes about complex interface versions
	  required to handle supporting two versions of libsigc++.

2006-06-08  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: make Account a to-router for it's own ID; this has not
	  been necessary up until now, since the response system handles almost all
	  operations recieved by Account.
	  
	* Eris/Account.cpp: correctly return HANDLED for sight(account) updates,
	  and trigger a character refresh if the characters attribute is modified

2006-06-07  James Turner  <james@worldforge.org>

	* Eris/Account.cpp, Eris/Account.h: update to handle sight(account)
	  operations from the server, allowing us to be notified of
	  new characters, and potentially other changes in the future.

2006-05-21  James Turner  <james@worldforge.org>

	* Eris/Response.h: fix corruption issue related to previous change;
	  if the response is destroyed normally, unregister the callback from
	  the member object.

2006-05-21  James Turner  <james@worldforge.org>

	* Eris/Avatar.h, Eris/Avatar.h, Eris/Account.cpp: move deactivate 